src/pages/tickets/detail/components/TicketMessages/Avatar.less
:local {
    .avatar {
        background: linear-gradient(
            143deg,
            #fff -15.08%,
            var(--neutral-grey-3, #ddd) 103.97%
        );
        color: var(--neutral-grey-4);
    }

    .isAgent {
        background: linear-gradient(
            143deg,
            #fff -15.08%,
            rgba(255, 182, 177, 0.4) 103.97%
        );
    }

    .isCurrentUser {
        background: linear-gradient(
            143deg,
            #fff -15.08%,
            rgba(154, 200, 255, 0.4) 103.97%
        );
    }

    .isAIAgent {
        background: linear-gradient(
            143deg,
            #fff -15.08%,
            var(--accessory-magenta-2) 103.97%
        );
        color: var(--accessory-magenta-3);
    }

    .icon.icon {
        font-size: 24px;
    }
}

